--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html> 
 <html> 
+<head>
+<style>
+body {
+  background-color: #E6E6FA;
+}
+</style>
+</head>
 <body> 
 
  <video controls id="myVideo">
