--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ body {
 <body> 
 
  <video controls id="myVideo" width="1280" >
-    <source src="https://storage.googleapis.com/webfundamentals-assets/videos/chrome.webm" type="video/webm">
-    <source src="https://storage.googleapis.com/webfundamentals-assets/videos/chrome.mp4" type="video/mp4">
+    <source src="test.webm" type="video/webm">
     <p>This browser does not support the video element.</p>
   </video>
 
