--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
 <body> 
 
  <video controls id="myVideo" width="640" >
-    <source src="test.mp4" type="video/mp4">
+    <source src="test.webm" type="video/webm">
     <p>This browser does not support the video element.</p>
   </video>
 
