--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function setPlaySpeedFast() {
 } 
 
 function update2() {
-  var illuminance = document.getElementById("value_lux").innerHTML.parseInt();
+  var illuminance = document.getElementById("value_lux").parseInt();
       
   var adjustment_b = Math.sqrt(illuminance)*2+70;	  
   
