--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ body {
 <form>
   <input type="checkbox" id="dyn_bright" name="dyn_bright" onclick="update2()">
   <label for="dyn_bright"> Brightness</label>
-  <input type="checkbox" id="dyn_contrast" name="dyn_contrast" onclick="update2()>
+  <input type="checkbox" id="dyn_contrast" name="dyn_contrast" onclick="update2()">
   <label for="dyn_contrast"> Contrast</label>
-  <input type="checkbox" id="dyn_saturation" name="dyn_saturation" onclick="update2()>
+  <input type="checkbox" id="dyn_saturation" name="dyn_saturation" onclick="update2()">
   <label for="dyn_saturation"> Saturation</label><br>
 </form>
 
