--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ function setPlaySpeedFast() {
 function update2() {
   var illuminance = parseInt(document.getElementById("value_lux").innerHTML);
       
-  var adjustment_b = Math.sqrt(illuminance)*2+80;	  
+  var adjustment_b = Math.pow(illuminance,0.4)/26*40+80;
   if(document.getElementById("dyn_bright").checked==false)
 	adjustment_b=100;
   if(adjustment_b>120)
 	adjustment_b=120;
-  var adjustment_c = Math.sqrt(illuminance)*2+80;	  
+  var adjustment_c = Math.pow(illuminance,0.4)/26*40+80;	  
   if(document.getElementById("dyn_contrast").checked==false)
 	adjustment_c=100;
   if(adjustment_c>120)
@@ -100,12 +100,12 @@ function update2() {
 function update(illuminance) {
   document.getElementById("value_lux").innerHTML = illuminance + " lux";
       
-  var adjustment_b = Math.sqrt(illuminance)*2+90;	  
+  var adjustment_b = Math.pow(illuminance,0.4)/26*40+80;	  
   if(document.getElementById("dyn_bright").checked==false)
 	adjustment_b=100;
   if(adjustment_b>120)
 	adjustment_b=120;
-  var adjustment_c = Math.sqrt(illuminance)*2+80;	  
+  var adjustment_c = Math.pow(illuminance,0.4)/26*40+80;
   if(document.getElementById("dyn_contrast").checked==false)
 	adjustment_c=100;
   if(adjustment_c>120)
