--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ body {
   </video>
 
 <form>
-  <input type="checkbox" id="dyn_bright" name="dyn_bright" onclick="update2()">
+  <input checked type="checkbox" id="dyn_bright" name="dyn_bright" onclick="update2()">
   <label for="dyn_bright"> Brightness</label>
-  <input type="checkbox" id="dyn_contrast" name="dyn_contrast" onclick="update2()">
+  <input checked type="checkbox" id="dyn_contrast" name="dyn_contrast" onclick="update2()">
   <label for="dyn_contrast"> Contrast</label>
   <input type="checkbox" id="dyn_saturation" name="dyn_saturation" onclick="update2()">
   <label for="dyn_saturation"> Sepia</label><br>
@@ -87,11 +87,11 @@ function update2() {
 	adjustment_c=100;
   if(adjustment_c>120)
 	adjustment_c=120;
-  var adjustment_s = 60-illuminance/100*60;
+  var adjustment_s = 40-illuminance/100*40;
   if(document.getElementById("dyn_saturation").checked==false)
 	adjustment_s=0;
-  if(adjustment_s>60)
-	adjustment_s=60;
+  if(adjustment_s>40)
+	adjustment_s=40;
   if(adjustment_s<=0)
 	adjustment_s=0;
 	
@@ -118,11 +118,11 @@ function update(illuminance) {
 	adjustment_c=100;
   if(adjustment_c>120)
 	adjustment_c=120;
-  var adjustment_s = 60-illuminance/100*60;
+  var adjustment_s = 40-illuminance/100*40;
   if(document.getElementById("dyn_saturation").checked==false)
 	adjustment_s=0;
-  if(adjustment_s>60)
-	adjustment_s=60;
+  if(adjustment_s>40)
+	adjustment_s=40;
   if(adjustment_s<=0)
 	adjustment_s=0;
 	
