--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {
   background-color: #111111;
   color: green;
-  font-size: xx-large;
+  font-size: large;
 }
 .green {
     color: #00FF00;
@@ -24,6 +24,29 @@ body {
   height: 100px;
   border: 1px solid #000;
   margin-left: 10px;
+}
+
+
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+  background-color: #000000;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+  background-color: 000000;
 }
 </style>
 </head>
