--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {
   background-color: #111111;
   color: green;
-  font-size: large;
+  font-size: normal;
 }
 .green {
     color: #00FF00;
@@ -72,12 +72,12 @@ body {
 	</form>
 
 	<table><tr><td>Video Time</td><td><p id="input2">0</p></td><td> / Speed</td><td><p id="input1">1.0</p></td></tr>
-	<tr><td><p>Current light intensity</td><td><b id="value_lux">unknown</b>.</p></td></tr>
-	<tr><td><p>Current brightness</td><td><b id="value_b">unknown</b>.</p> </td></tr>
-	<tr><td><p>Current contrast</td><td><b id="value_c">unknown</b>.</p></td></tr>
-	<tr><td><p>Current sepia</td><td><b id="value_s">unknown</b>.</p></td></tr>
+	<tr><td><p>环境亮度</td><td><b id="value_lux">unknown</b>.</p></td></tr>
+	<tr><td><p>亮度调整</td><td><b id="value_b">unknown</b>.</p> </td></tr>
+	<tr><td><p>对比度调整</td><td><b id="value_c">unknown</b>.</p></td></tr>
+	<tr><td><p>褐度</td><td><b id="value_s">unknown</b>.</p></td></tr>
 	</table>
-	chrome://flags/#enable-generic-sensor
+	打开传感器权限：chrome://flags/#enable-generic-sensor
 	<div id="box"> </div>
   </div>
 </div>
