--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ body {
 		<label for="dyn_sepia"> 自适应“防蓝光”</label><br><br>
 	</form>
 
-	<table><tr><td>Video Time</td><td><p id="input2">0</p></td><td> / Speed</td><td><p id="input1">1.0</p></td></tr>
+	<table><tr><td>Video Time</td><td><p id="input2">0</p></td></tr>
+	<tr><td>Speed</td><td><p id="input1">1.0</p></td></tr>
 	<tr><td><p>环境亮度</td><td><b id="value_lux">unknown</b>.</p></td></tr>
 	<tr><td><p>亮度调整</td><td><b id="value_b">unknown</b>.</p> </td></tr>
 	<tr><td><p>对比度调整</td><td><b id="value_c">unknown</b>.</p></td></tr>
