--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ body {
 
 	<table><tr><td>Video Time</td><td><p id="input2">0</p></td></tr>
 	<tr><td>Speed</td><td><p id="input1">1.0</p></td></tr>
-	<tr><td><p>环境亮度</td><td><b id="value_lux">unknown</b>.</p></td></tr>
-	<tr><td><p>亮度调整</td><td><b id="value_b">unknown</b>.</p> </td></tr>
-	<tr><td><p>对比度调整</td><td><b id="value_c">unknown</b>.</p></td></tr>
-	<tr><td><p>褐度</td><td><b id="value_s">unknown</b>.</p></td></tr>
+	<tr><td>环境亮度</td><td><b id="value_lux">unknown</b>.</td></tr>
+	<tr><td>亮度调整</td><td><b id="value_b">unknown</b>.</td></tr>
+	<tr><td>对比度调整</td><td><b id="value_c">unknown</b>.</td></tr>
+	<tr><td>褐度调整</td><td><b id="value_s">unknown</b>.</td></tr>
 	</table>
 	打开传感器权限：chrome://flags/#enable-generic-sensor
 	<div id="box"> </div>
