--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ body {
 	<tr><td>对比度调整</td><td><b id="value_c">unknown</b>.</td></tr>
 	<tr><td>褐度调整</td><td><b id="value_s">unknown</b>.</td></tr>
 	</table>
-	打开传感器权限：chrome://flags/#enable-generic-sensor
+	打开传感器权限：<br>
+	chrome://flags/#enable-generic-sensor
 	<div id="box"> </div>
   </div>
 </div>
