--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
 		<label for="dyn_sepia"> 自适应“防蓝光”</label><br><br>
 	</form>
 
-	<table><tr><td>Video Time</td><td><p id="input2">0</p></td></tr>
+	<table>
 	<tr><td>环境亮度</td><td><b id="value_lux">unknown</b>.</td></tr>
 	<tr><td>亮度调整</td><td><b id="value_b">unknown</b>.</td></tr>
 	<tr><td>对比度调整</td><td><b id="value_c">unknown</b>.</td></tr>
