--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
 		<input checked type="checkbox" id="dyn_contrast" name="dyn_contrast" onclick="update2()">
 		<label for="dyn_contrast"> 自适应对比度</label><br>
 		<input type="checkbox" id="dyn_sepia" name="dyn_sepia" onclick="update2()">
-		<label for="dyn_sepia"> 自适应“防蓝光”</label><br><br>
+		<label checked for="dyn_sepia"> 自适应“防蓝光”</label><br><br>
 
 	</form>
 
