--- a/spatial_video.html
+++ b/spatial_video.html
@@ -101,9 +101,9 @@
 				var container = document.getElementById( 'container' );
 
 				camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, 5000 );
-				camera.position.set( 0, 0, -1000 );
+				camera.position.set( 0, 0, 1000 );
 				controls = new DeviceOrientationControls( camera );
-
+				controls.lookAt(0,0,0);
 				var light = new THREE.PointLight( 0xffffff, 1 );
 				light.position.set( 50, 100, 100 );
 				camera.add( light );
