--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 
 				camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, 5000 );
 				camera.position.set( 0, 0, 1000 );
-				controls = new DeviceOrientationControls( camera, screenOrientation: 90 );
-				 
+				controls = new DeviceOrientationControls( camera );
 				var light = new THREE.PointLight( 0xffffff, 1 );
 				light.position.set( 50, 100, 100 );
 				camera.add( light );
