video plane rotate

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				var light = new THREE.PointLight( 0xffffff, 1 );
 				light.position.set( 50, 100, 100 );
 				camera.add( light );
-				camera.lookAt(0, 0, -1000);
+
 				glscene = new THREE.Scene();
 				glscene.add( camera );
 //				glscene.add( light );
@@ -171,9 +171,9 @@
 
 //				createYoutubeVideo('Y2-xZ-1HE-Q', 0, 0, 0, 0);
 //				createYoutubeVideo('IrydklNpcFI', 480, 0, 0, 0);
-				createYoutubeVideo('k31566kjd11', -960, 0, 0, 0);
-				createYoutubeVideo('j31583bsoxs', 960, 0, 0, 0);
-				createYoutubeVideo('m3218u5u41m', 0, 0, 0, 0);
+				createYoutubeVideo('k31566kjd11', -960, 0, 0, Math.PI/2);
+				createYoutubeVideo('j31583bsoxs', 960, 0, 0, Math.PI/2);
+				createYoutubeVideo('m3218u5u41m', 0, 0, 0, Math.PI/2);
 
 				var backPlaneGeometry = new THREE.PlaneGeometry(1920, 1080)
 				
