--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				var backPlaneGeometry = new THREE.PlaneGeometry(1920, 1080)
 				
 				backPlane = new THREE.Mesh(backPlaneGeometry,  new THREE.MeshPhongMaterial( { color: 0x000000, side: THREE.DoubleSide } ));
-				backPlane.position.set(0,0,-200);
+				backPlane.position.set(-800,0,0);
 				glscene.add(backPlane);
 
 
