--- a/index.html
+++ b/index.html
@@ -171,9 +171,19 @@
 
 //				createYoutubeVideo('Y2-xZ-1HE-Q', 0, 0, 0, 0);
 //				createYoutubeVideo('IrydklNpcFI', 480, 0, 0, 0);
-				createYoutubeVideo('k31566kjd11', -1000, 0, 1000, Math.PI/2);
+//				createYoutubeVideo('k31566kjd11', -1000, 0, 1000, Math.PI/2);
 				createYoutubeVideo('j31583bsoxs', -1000, 0, 0, Math.PI/2);
-				createYoutubeVideo('m3218u5u41m', -1000, 0, 2000, Math.PI/2);
+//				createYoutubeVideo('m3218u5u41m', -1000, 0, 2000, Math.PI/2);
+
+			var listener = new THREE.AudioListener();
+			camera.add( listener );
+
+			var audioElement = document.getElementById( 'iframe' );
+
+			var positionalAudio = new THREE.PositionalAudio( listener );
+			positionalAudio.setMediaElementSource( audioElement );
+			positionalAudio.setRefDistance( 1 );
+			positionalAudio.setDirectionalCone( 180, 230, 0.1 );
 
 				var backPlaneGeometry = new THREE.PlaneGeometry(1920, 1080)
 				
