--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 			iframe.style.height = '100%';
 			iframe.style.border = '0px';
 //			iframe.src = [ 'https://www.youtube.com/embed/', id, '?rel=0' ].join( '' );
-			iframe.src = [ 'https://v.qq.com/txp/iframe/player.html?vid=', id ].join( '' );
+//			iframe.src = [ 'https://v.qq.com/txp/iframe/player.html?vid=', id ].join( '' );
+			iframe.src = "test.webm"
 			div.appendChild( iframe );
 			
 			var cssobject = new CSS3DObject( div );
